// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderCheckMarkCell should render a HeaderCheckMarkCell 1`] = `
<div
  className="header-cell"
  role="columnheader"
>
  <div
    className="container"
  >
    <VisuallyHiddenText
      className="label"
      text="test text"
    />
    <div
      aria-hidden={true}
      className="checkmark"
      focusable="false"
    />
  </div>
</div>
`;

exports[`HeaderCheckMarkCell should render a HeaderCheckMarkCell as selectable 1`] = `
<div
  className="header-cell is-interactable"
  data-cell-show-focus={true}
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="columnheader"
  tabIndex="0"
>
  <div
    className="container"
  >
    <VisuallyHiddenText
      aria-checked={false}
      className="label"
      role="checkbox"
      text="test text"
    />
    <div
      aria-hidden={true}
      className="checkmark"
      focusable="false"
    />
  </div>
</div>
`;

exports[`HeaderCheckMarkCell should render a HeaderCheckMarkCell as selectable disabled 1`] = `
<div
  className="header-cell"
  data-cell-show-focus={true}
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="columnheader"
  tabIndex="0"
>
  <div
    className="container"
  >
    <VisuallyHiddenText
      aria-checked={false}
      aria-disabled={true}
      className="label"
      role="checkbox"
      text="test text"
    />
    <div
      aria-hidden={true}
      className="checkmark is-disabled"
      focusable="false"
    />
  </div>
</div>
`;

exports[`HeaderCheckMarkCell should render a HeaderCheckMarkCell as selectable with selection 1`] = `
<div
  className="header-cell is-interactable"
  data-cell-show-focus={true}
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="columnheader"
  tabIndex="0"
>
  <div
    className="container"
  >
    <VisuallyHiddenText
      aria-checked={true}
      className="label"
      role="checkbox"
      text="test text"
    />
    <div
      aria-hidden={true}
      className="checkmark is-selected"
      focusable="false"
    />
  </div>
</div>
`;

exports[`HeaderCheckMarkCell should render a HeaderCheckMarkCell as selectable with selection and disabled 1`] = `
<div
  className="header-cell"
  data-cell-show-focus={true}
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="columnheader"
  tabIndex="0"
>
  <div
    className="container"
  >
    <VisuallyHiddenText
      aria-checked={true}
      aria-disabled={true}
      className="label"
      role="checkbox"
      text="test text"
    />
    <div
      aria-hidden={true}
      className="checkmark is-selected is-disabled"
      focusable="false"
    />
  </div>
</div>
`;

exports[`HeaderCheckMarkCell should render a HeaderCheckMarkCell as selectable with selection and indeterminate 1`] = `
<div
  className="header-cell is-interactable"
  data-cell-show-focus={true}
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="columnheader"
  tabIndex="0"
>
  <div
    className="container"
  >
    <VisuallyHiddenText
      aria-checked="mixed"
      className="label"
      role="checkbox"
      text="test text"
    />
    <div
      aria-hidden={true}
      className="checkmark is-selected is-intermediate"
      focusable="false"
    />
  </div>
</div>
`;

exports[`HeaderCheckMarkCell should render a HeaderCheckMarkCell as selectable with selection, indeterminate, and disabled 1`] = `
<div
  className="header-cell"
  data-cell-show-focus={true}
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="columnheader"
  tabIndex="0"
>
  <div
    className="container"
  >
    <VisuallyHiddenText
      aria-checked="mixed"
      aria-disabled={true}
      className="label"
      role="checkbox"
      text="test text"
    />
    <div
      aria-hidden={true}
      className="checkmark is-selected is-intermediate is-disabled"
      focusable="false"
    />
  </div>
</div>
`;

exports[`HeaderCheckMarkCell should render a HeaderCheckMarkCell with alignment 1`] = `
<div
  className="header-cell"
  role="columnheader"
>
  <div
    className="container"
    style={
      Object {
        "paddingBottom": "5px",
      }
    }
  >
    <VisuallyHiddenText
      className="label"
      text="test text"
    />
    <div
      aria-hidden={true}
      className="checkmark"
      focusable="false"
    />
  </div>
</div>
`;

exports[`HeaderCheckMarkCell should render a HeaderCheckMarkCell with child content 1`] = `
<div
  className="header-cell"
  role="columnheader"
>
  <div
    className="container"
  >
    <VisuallyHiddenText
      className="label"
      text="test text"
    />
    <div
      aria-hidden={true}
      className="checkmark"
      focusable="false"
    />
  </div>
</div>
`;

exports[`HeaderCheckMarkCell should render a HeaderCheckMarkCell with width inner container removed 1`] = `
<div
  className="header-cell"
  removeInner={true}
  role="columnheader"
>
  <div
    className="container"
  >
    <VisuallyHiddenText
      className="label"
      text="test text"
    />
    <div
      aria-hidden={true}
      className="checkmark"
      focusable="false"
    />
  </div>
</div>
`;

exports[`HeaderCheckMarkCell should render with callback functions 1`] = `
<div
  className="header-cell is-interactable"
  data-cell-show-focus={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="columnheader"
  tabIndex="0"
>
  <div
    className="container"
  >
    <VisuallyHiddenText
      aria-checked={false}
      className="label"
      role="checkbox"
      text="test text"
    />
    <div
      aria-hidden={true}
      className="checkmark"
      focusable="false"
    />
  </div>
</div>
`;
